# sendkit-rust

./: CLAUDE.md  Cargo.toml  README.md  release.sh
.github/workflows/: tests.yml
src/: client.rs  emails.rs  error.rs  lib.rs
tests/: integration_test.rs
