[package]
name = "sendkit"
version = "1.0.0"
edition = "2021"
description = "Rust SDK for the SendKit email API"
license = "MIT"
repository = "https://github.com/sendkitdev/sendkit-rust"
keywords = ["sendkit", "email", "api", "sdk"]
categories = ["api-bindings", "email"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
